# CCWT

./: LICENSE  MANIFEST.in  Makefile  README.md  ccwt.c  cwt.cpp  pyproject.toml  setup.py
include/: ccwt.h  color_scheme.h  synchrosqueeze_mode.h
src/: ccwt.c  python_api.c  render_png.c
